# time-series-forecasting-with-moirai

./: 2025-03-15_Time-Series-Forecasting-with-Moirai-5d063a40e9ed.py  README.md  article.md  config.yaml  eia_moirai_march_fixed.py  main.py  moirai_forecasting.py  pyproject.toml  requirements.txt
05_Comparing-TimeGPT-Chronos-Moirai/: generate_images.py
05_Comparing-TimeGPT-Chronos-Moirai/code/: 05_Comparing-TimeGPT-Chronos-Moirai.py
05_Comparing-TimeGPT-Chronos-Moirai/content/: 05_Comparing-TimeGPT-Chronos-Moirai.md
_drafts/: eia_moirai_march_fixed.py
article-military-tech-survival-analsysis/: 2025 correlates of war technology.ipynb  2025 correlates of war technology.py  2025-05-10 military technology lifelines.ipynb  2025-05-10 military technology lifelines.py
article-military-tech-survival-analsysis/cow_tech_survival/: __init__.py  define_country_groups_by_ccode.py  filter_the_arms_df_to_only_include_use_1.py  filter_to_only_small_arms_usage_spells.py  load_long_format_data.py  load_long_format_data_2.py  load_your_dataset.py  re.py
article-military-tech-survival-analsysis/cow_tech_survival/notebook_steps/: assign_group.py  compare_top_5_most_common_tech_types_pairwise.py  create_a_lookup_for_ccode_techname_usage_group_e.py  custom_kaplan_meier_plot_with_formatting_improve.py  define_the_50_year_bins.py  filter_only_use_1_rows_again.py  filter_spells_to_only_include_those_that_began_i.py  filter_the_spells_to_only_small_arms_and_fighter.py  main.py  (+31 more)
article-military-tech-survival-analsysis/legacy/: 2025 correlates of war technology.py
src/: core.py
