[project]
name = "time-series-forecasting-with-moirai"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.10.0",
    "lifelines>=0.30.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
